trip advisor button

--- a/resources/views/Tour/_trip_advisor_button.html.twig
+++ b/resources/views/Tour/_trip_advisor_button.html.twig
@@ -1,4 +1,4 @@
 <a href="https://www.tripadvisor.com/Attraction_Review-g293956-d14109676-Reviews-Travel_All_Mongolia-Ulaanbaatar.html"
    target="blank" class="btn btn_green"><img class="alignnone size-full wp-image-2966"
                        src="/images/trip_advisor_2.jpg"
-                       alt="Read our trip advisor reviews" style="height: 35px !important; margin-top: 10px;"></a>
+                       alt="Read our trip advisor reviews" style="height: 100% !important; display: block;"></a>
