--- a/resources/views/Tour/_trip_advisor_button.html.twig
+++ b/resources/views/Tour/_trip_advisor_button.html.twig
@@ -1,3 +1,6 @@
 <a href="https://www.tripadvisor.com/Attraction_Review-g293956-d14109676-Reviews-Travel_All_Mongolia-Ulaanbaatar.html"
    target="blank" class="btn btn_green">
-    <span style="padding: 0 0 0 0;">A</span></a>
+    <span style="padding: 0 0 0 0;">
+        <img src="/images/trip_advisor_2.jpg" alt="Read our trip advisor reviews"
+             style="height: 100% !important; display: block;">
+    </span></a>
