--- a/resources/views/Tour/_trip_advisor_button.html.twig
+++ b/resources/views/Tour/_trip_advisor_button.html.twig
@@ -1,5 +1,5 @@
 <a href="https://www.tripadvisor.com/Attraction_Review-g293956-d14109676-Reviews-Travel_All_Mongolia-Ulaanbaatar.html"
    target="blank" class="btn btn_green">
-    <span style="padding: 0 0 0 0; ; background-size: 100%; width: 125px;">
-TRIP ADVISOR
+    <span style="padding: 0 0 0 0; background-image: url('/images/trip_advisor_2.jpg'); background-size: 100%; width: 125px;">
+&nbsp;
     </span></a>
