--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -139,6 +139,7 @@
                 <ul>
                     <li><a href="{{ path('homepage') }}"><span>Home</span></a></li>
                     <li><a href="{{ path('page_show', {'slug':'about-us'}) }}"><span>About us</span></a></li>
+                    <li><a href="{{ path('page_show', {'slug':'private-customized-tours'}) }}"><span>Private Customized Tours</span></a></li>
                     <li><a href="{{ path('page_show', {'slug':'testimonials'}) }}"><span>Testimonials</span></a></li>
                     <li><a href="{{ path('page_show', {'slug':'our-lodge'}) }}"><span>Our Lodge</span></a></li>
                     <li><a href="{{ path('page_show', {'slug':'mongolian-arts-and-culture'}) }}"><span>Mongolian Arts and Culture</span></a></li>
