--- a/resources/views/Page/show.html.twig
+++ b/resources/views/Page/show.html.twig
@@ -46,3 +46,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
