--- a/resources/views/Page/private_customized_tours.html.twig
+++ b/resources/views/Page/private_customized_tours.html.twig
@@ -41,30 +41,25 @@
                                         {{ form_widget(form.first_name, { 'attr': {'class': 'inputField required'} }) }}
                                         {{ form_errors(form.first_name) }}
                                     </div>
-                                    {#<div class="row alignleft field_text">
-                                        {{ form_label(form.title) }}
-                                        {{ form_widget(form.title, { 'attr': {'class': 'inputField required'} }) }}
-                                        {{ form_errors(form.title) }}
-                                    </div>#}
                                     <div class="row alignleft field_text">
-                                        {{ form_label(form.country) }}
-                                        {{ form_widget(form.country, { 'attr': {'class': 'inputField required'} }) }}
-                                        {{ form_errors(form.country) }}
+                                        {{ form_label(form.email) }}
+                                        {{ form_widget(form.email, { 'attr': {'class': 'inputField required'} }) }}
+                                        {{ form_errors(form.email) }}
                                     </div>
                                     <div class="row alignleft field_text">
-                                        {{ form_label(form.city) }}
-                                        {{ form_widget(form.city, { 'attr': {'class': 'inputField required'} }) }}
-                                        {{ form_errors(form.city) }}
+                                        {{ form_label(form.phone_numbers) }}
+                                        {{ form_widget(form.phone_numbers, { 'attr': {'class': 'inputField required'} }) }}
+                                        {{ form_errors(form.phone_numbers) }}
                                     </div>
                                     <div class="row alignleft field_text">
-                                        {{ form_label(form.address_line_2) }}
-                                        {{ form_widget(form.address_line_2, { 'attr': {'class': 'inputField'} }) }}
-                                        {{ form_errors(form.address_line_2) }}
+                                        {{ form_label(form.accommodation_level) }}
+                                        {{ form_widget(form.accommodation_level, { 'attr': {'class': 'inputField'} }) }}
+                                        {{ form_errors(form.accommodation_level) }}
                                     </div>
                                     <div class="row alignleft field_text">
-                                        {{ form_label(form.home_phone) }}
-                                        {{ form_widget(form.home_phone, { 'attr': {'class': 'inputField required'} }) }}
-                                        {{ form_errors(form.home_phone) }}
+                                        {{ form_label(form.tour_start_date) }}
+                                        {{ form_widget(form.tour_start_date, { 'attr': {'class': 'inputField required'} }) }}
+                                        {{ form_errors(form.tour_start_date) }}
                                     </div>
                                 </div>
 
@@ -74,30 +69,25 @@
                                         {{ form_widget(form.last_name, { 'attr': {'class': 'inputField required'} }) }}
                                         {{ form_errors(form.last_name) }}
                                     </div>
-                                    {#<div class="row alignleft field_text">
-                                        {{ form_label(form.organization) }}
-                                        {{ form_widget(form.organization, { 'attr': {'class': 'inputField required'} }) }}
-                                        {{ form_errors(form.organization) }}
-                                    </div>#}
                                     <div class="row alignleft field_text">
-                                        {{ form_label(form.zip_code) }}
-                                        {{ form_widget(form.zip_code, { 'attr': {'class': 'inputField required'} }) }}
-                                        {{ form_errors(form.zip_code) }}
+                                        {{ form_label(form.nationality) }}
+                                        {{ form_widget(form.nationality, { 'attr': {'class': 'inputField required'} }) }}
+                                        {{ form_errors(form.nationality) }}
                                     </div>
                                     <div class="row alignleft field_text">
-                                        {{ form_label(form.address_line_1) }}
-                                        {{ form_widget(form.address_line_1, { 'attr': {'class': 'inputField required'} }) }}
-                                        {{ form_errors(form.address_line_1) }}
+                                        {{ form_label(form.traveling_children) }}
+                                        {{ form_widget(form.traveling_children, { 'attr': {'class': 'inputField required'} }) }}
+                                        {{ form_errors(form.traveling_children) }}
                                     </div>
                                     <div class="row alignleft field_text">
-                                        {{ form_label(form.mobile_phone) }}
-                                        {{ form_widget(form.mobile_phone, { 'attr': {'class': 'inputField required'} }) }}
-                                        {{ form_errors(form.mobile_phone) }}
+                                        {{ form_label(form.budget) }}
+                                        {{ form_widget(form.budget, { 'attr': {'class': 'inputField required'} }) }}
+                                        {{ form_errors(form.budget) }}
                                     </div>
                                     <div class="row alignleft field_text">
-                                        {{ form_label(form.email) }}
-                                        {{ form_widget(form.email, { 'attr': {'class': 'inputField required'} }) }}
-                                        {{ form_errors(form.email) }}
+                                        {{ form_label(form.tour_end_date) }}
+                                        {{ form_widget(form.tour_end_date, { 'attr': {'class': 'inputField required'} }) }}
+                                        {{ form_errors(form.tour_end_date) }}
                                     </div>
                                 </div>
 
