--- a/resources/views/Page/private_customized_tours.html.twig
+++ b/resources/views/Page/private_customized_tours.html.twig
@@ -53,7 +53,7 @@
                                     </div>
                                     <div class="row alignleft field_text">
                                         {{ form_label(form.accommodation_level) }}
-                                        {{ form_widget(form.accommodation_level, { 'attr': {'class': 'inputField'} }) }}
+                                        {{ form_widget(form.accommodation_level, { 'attr': {'class': 'select_styled', 'style':'height: 38px;width: 230px;'} }) }}
                                         {{ form_errors(form.accommodation_level) }}
                                     </div>
                                     <div class="row alignleft field_text">
@@ -81,7 +81,7 @@
                                     </div>
                                     <div class="row alignleft field_text">
                                         {{ form_label(form.budget) }}
-                                        {{ form_widget(form.budget, { 'attr': {'class': 'inputField required'} }) }}
+                                        {{ form_widget(form.budget, { 'attr': {'class': 'select_styled', 'style':'height: 38px;width: 230px;'} }) }}
                                         {{ form_errors(form.budget) }}
                                     </div>
                                     <div class="row alignleft field_text">
