--- a/resources/views/Page/private_customized_tours.html.twig
+++ b/resources/views/Page/private_customized_tours.html.twig
@@ -63,7 +63,7 @@
                                     </div>
                                     <div class="row alignleft field_text">
                                         {{ form_label(form.comment) }}
-                                        {{ form_widget(form.comment, { 'attr': {'class': 'inputField required', 'rows' => '30'} }) }}
+                                        {{ form_widget(form.comment, { 'attr': {'class': 'inputField required', 'rows': '30'} }) }}
                                         {{ form_errors(form.comment) }}
                                     </div>
                                 </div>
