--- a/resources/views/Page/private_customized_tours.html.twig
+++ b/resources/views/Page/private_customized_tours.html.twig
@@ -35,7 +35,7 @@
 
                                 {{ form_errors(form) }}
 
-                                <div>
+                                <div class="form_col_2" style="margin-right: 30px;">
                                     <div class="form_col_1" style="margin-right: 30px;">
                                         <div class="row alignleft field_text">
                                             {{ form_label(form.first_name) }}
@@ -92,10 +92,12 @@
                                         </div>
                                     </div>
 
+                                    <div class="form_col_2" style="margin-right: 30px;">
                                     <div class="row alignleft field_text">
                                         {{ form_label(form.comment) }}
                                         {{ form_widget(form.comment, { 'attr': {'class': 'inputField required', 'rows': '30'} }) }}
                                         {{ form_errors(form.comment) }}
+                                    </div>
                                     </div>
                                 </div>
 
@@ -104,7 +106,8 @@
                                         {{ form_label(form.preferences) }}
                                         {% for option in form.preferences %}
                                             <div>
-                                                {{ form_row(option) }}
+                                                {{ form_widget(option) }}
+                                                {{ form_label(option) }}
                                             </div>
                                         {% endfor %}
                                         {{ form_errors(form.preferences) }}
