--- a/resources/views/Page/private_customized_tours.html.twig
+++ b/resources/views/Page/private_customized_tours.html.twig
@@ -35,7 +35,7 @@
 
                                 {{ form_errors(form) }}
 
-                                <div class="form_col_2" style="margin-right: 30px;">
+                                <div class="form_col_2" style="margin-right: 0px;">
                                     <div class="form_col_1" style="margin-right: 30px;">
                                         <div class="row alignleft field_text">
                                             {{ form_label(form.first_name) }}
@@ -64,7 +64,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="form_col_1" style="margin-right: 30px;">
+                                    <div class="form_col_1" style="margin-right: 0px;">
                                         <div class="row alignleft field_text">
                                             {{ form_label(form.last_name) }}
                                             {{ form_widget(form.last_name, { 'attr': {'class': 'inputField required'} }) }}
@@ -92,8 +92,8 @@
                                         </div>
                                     </div>
 
-                                    <div class="form_col_2" style="margin-right: 30px;">
-                                    <div class="row alignleft field_text">
+                                    <div class="form_col_2" style="margin-right: 0px;">
+                                    <div class="row field_text">
                                         {{ form_label(form.comment) }}
                                         {{ form_widget(form.comment, { 'attr': {'class': 'inputField required', 'rows': '30'} }) }}
                                         {{ form_errors(form.comment) }}
@@ -101,7 +101,7 @@
                                     </div>
                                 </div>
 
-                                <div class="form_col_1" style="margin-right: 30px;">
+                                <div class="form_col_1" style="margin-right: 0px;">
                                     <div class="row alignleft field_text">
                                         {{ form_label(form.preferences) }}
                                         {% for option in form.preferences %}
