--- a/resources/views/Tour/western-southern-and-northern-mongolia-expedition.html.twig
+++ b/resources/views/Tour/western-southern-and-northern-mongolia-expedition.html.twig
@@ -302,11 +302,11 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Day 5 Return to Ulaanbaatar</div>
+                                <div class="box_title">Day 5 Flight back to Ulaanbaatar and day trip to Terelj National Park & statue of Chinggis Khan</div>
                                 <div class="box_content">
-                                    <p>After breakfast, we return to Muron for our afternoon flight to Ulaanbaatar. Upon arrival,
-
-                                        transfer to the hotel in the city and rest of the day is open for you to pursue your own interest.</p>
+                                    <p>Following an early morning breakfast, you will be transferred back to the Murun Airport. We bid farewell to our drivers and fly to Ulaanbaatar where we meet our local transport for a 90-minute drive to Gorkhi Terelj National Park. This unforgettable excursion will take you to features such as scenic valleys, a winding river, and restful groves of trees. Many nomads live in the park itself, where they find lush land for their animals, and you may even see majestic herds of yak grazing near the camp. Once inside the park you will be able to visit the notable rock formations "Turtle rock" and “Monk reading a book." You will also have the opportunity to hike up to the Aryabal meditation center and learn more about Mongolian Buddhism.
+                                        <br>On the way to the national park, you will take a detour to visit the giant Statue of Chinggis Khan which stands 40m (132 ft) high. The monument is about 33 miles east of Ulaanbaatar and stands at the point where, according to legend, he found a golden whip. The statue is symbolically pointed east, towards his birthplace. It is on top of the Chinggis Khan Statue Complex, a visitor center, itself 10 meters (32 ft 10 in) tall, with 36 columns representing the 36 khans from Genghis to Ligdan Khan. It was designed by sculptor D. Erdenebileg and architect J. Enkhjargal and erected in 2008.
+                                        <br>In the afternoon we will drive back to Ulaanbaatar and transfer to the hotel.</p>
                                     <p><strong><em> Overnight in 4* hotel, <br/> Meals: Breakfast</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
