ene site deer nemegdeh, Overland discovery with golden eagle festival gedeg aylaliin hutulbur email eer yawuulaw #3

--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -1836,6 +1836,35 @@
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <p>10</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'overland-discovery-with-golden-eagle-hunting-festival' }) }}">{{ app.content_tours.tourName('overland-discovery-with-golden-eagle-hunting-festival') }}</a></p>
+                </td>
+                <td>
+                    <p>22<sup>th</sup> of Sep, 2019</p>
+                </td>
+                <td>
+                    <p>10<sup>th</sup> of Oct, 2019</p>
+                </td>
+                <td>
+                    <p>2 - 16 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'overland-discovery-with-golden-eagle-hunting-festival' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
             </tbody>
         </table>
 </div>
