--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -31,6 +31,7 @@
             var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
             ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+            gtag('config', 'AW-769846702');
         })();
     </script>
 
