travel all iin updated itinerary,   Golden Eagle Festival, Gobi Desert, Terelj & Hustai National Park 2019

--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -1670,10 +1670,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">{{ app.content_tours.tourName('eagle-festival-and-gobi-desert') }}</a></p>
                 </td>
                 <td>
-                    <p>6<sup>th</sup> of September, 2019</p>
+                    <p>4<sup>th</sup> of September, 2019</p>
                 </td>
                 <td>
-                    <p>19<sup>th</sup> of October, 2019</p>
+                    <p>18<sup>th</sup> of September, 2019</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -1699,10 +1699,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">{{ app.content_tours.tourName('eagle-festival-and-gobi-desert') }}</a></p>
                 </td>
                 <td>
-                    <p>13<sup>th</sup> of September, 2019</p>
+                    <p>25<sup>th</sup> of September, 2019</p>
                 </td>
                 <td>
-                    <p>26<sup>th</sup> of September, 2019</p>
+                    <p>9<sup>th</sup> of October, 2019</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -1812,35 +1812,6 @@
                     <p>9</p>
                 </td>
                 <td>
-                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">{{ app.content_tours.tourName('eagle-festival-and-gobi-desert') }}</a></p>
-                </td>
-                <td>
-                    <p>27<sup>th</sup> of September, 2019</p>
-                </td>
-                <td>
-                    <p>10<sup>th</sup> of October, 2019</p>
-                </td>
-                <td>
-                    <p>16 persons</p>
-                </td>
-                <td>
-                    <p>Available</p>
-                </td>
-                <td>
-                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
-                </td>
-                <td>
-                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
-                </td>
-                <td>
-                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <p>10</p>
-                </td>
-                <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'overland-discovery-with-golden-eagle-hunting-festival' }) }}">{{ app.content_tours.tourName('overland-discovery-with-golden-eagle-hunting-festival') }}</a></p>
                 </td>
                 <td>
@@ -1860,6 +1831,64 @@
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'overland-discovery-with-golden-eagle-hunting-festival' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>10</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">{{ app.content_tours.tourName('eagle-festival-and-gobi-desert') }}</a></p>
+                </td>
+                <td>
+                    <p>2<sup>nd</sup> of September, 2020</p>
+                </td>
+                <td>
+                    <p>16<sup>th</sup> of September, 2020</p>
+                </td>
+                <td>
+                    <p>16 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>11</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">{{ app.content_tours.tourName('eagle-festival-and-gobi-desert') }}</a></p>
+                </td>
+                <td>
+                    <p>23<sup>th</sup> of September, 2020</p>
+                </td>
+                <td>
+                    <p>7<sup>th</sup> of October, 2020</p>
+                </td>
+                <td>
+                    <p>16 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
