--- a/resources/views/Tour/treasures_of_mongolia.html.twig
+++ b/resources/views/Tour/treasures_of_mongolia.html.twig
@@ -38,7 +38,7 @@
                         <br/>
                         <b style="color: #B28E1B">Region:</b> <span>{{ tour.region }}</span>
                         <br/>
-                        <b style="color: #B28E1B">Price:</b> <span>$2995</span>
+                        <b style="color: #B28E1B">Price:</b> <span>$2595</span>
                         <br/>{#
                         <span style="font-weight: bold; color: brown"><a
                                     href="http://www.travelallmongolia.com/contact/form">
@@ -46,9 +46,9 @@
                         <br/>#}
                         {#<span style="font-weight: bold; color: brown">$300 OFF by Oct 31</span>
                         <br/>#}
-                        <a href="http://www.travelallmongolia.com/contact/form">
-                            <span style="font-weight: bold; color: brown">We have special discount for this trip, please contact us</span>
-                        </a>
+                        {#<a href="http://www.travelallmongolia.com/contact/form">#}
+                            {#<span style="font-weight: bold; color: brown">We have special discount for this trip, please contact us</span>#}
+                        {#</a>#}
                         <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$500</span>
                         <br/>
